@@ -3,6 +3,8 @@
 	* docs/nact/C/nact-conditions.xml: Embeds literal values between
 	<literal>..</literal> tags.
 
+	* src/nact/nact-tree-model-dnd.c: Fix comments.
+
 	* src/nact/nact-export-ask.c (nact_export_ask_user): Micro code-format.
 
 	* src/nact/nact-clipboard.c (nact_clipboard_dnd_drag_end): Fix micro leak.
